--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>rock-paper-scissors</title>
-    <script src="./myScript.js"></script>
+    <script src="./myScript.js" defer></script>
+    <style src="./style.css" ></style>
 </head>
 <body>
+    <h1>Rock, Paper or Scissors</h1>
+
+    <div class="button-container">
+    <button id="rock">Rock</button>
+    <button id="paper">Paper</button>
+    <button id="scissors">Scissors</button>
+    </div>
     
 </body>
 </html>
